fix(style): unwanted border radius on iOS

--- a/app.css
+++ b/app.css
@@ -83,6 +83,7 @@ textarea {
 input {
   color: #fff;
   font-family: Menlo, Consolas, monospace;
+  border-radius: 0;
 }
 
 button {
